--- a/b1_helloworld.html
+++ b/b1_helloworld.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B1. Hello World</title>
+    <link rel="stylesheet" href="b1_css.css"/>
 </head>
 <body>
     <p>hello world!</p>
